--- a/app/src/main/res/layout/listview_logs_main.xml
+++ b/app/src/main/res/layout/listview_logs_main.xml
@@ -37,6 +37,16 @@
                 android:textStyle="normal"
                 android:textColor="@android:color/black"
                 android:gravity="end" />
+
+            <ImageButton
+                android:id="@+id/logs_btn_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_more_vert"
+                android:layout_toRightOf="@+id/txt_logs_text"
+                android:background="@null" />
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -54,6 +64,7 @@
                 android:text="sdfsfsdf sef zegfsdf sqdf df "
                 android:textStyle="normal"
                 android:textColor="@color/ColorPrimaryDark" />
+
 
         </LinearLayout>
 
