--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:background="@color/ColorPrimary"
     android:elevation="0dp"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+    android:theme="@style/AppTheme"
     xmlns:android="http://schemas.android.com/apk/res/android" />
 
 
