--- a/app/src/main/res/layout/listview_logs_main.xml
+++ b/app/src/main/res/layout/listview_logs_main.xml
@@ -3,45 +3,60 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/layout_bg"
+        android:elevation="1dp" >
+
     <RelativeLayout
         android:id="@+id/layout_logs_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:padding="5dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="5dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/layout_logs_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="3"
             android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/txt_logs_main_infos"
-                android:layout_width="0dp"
-                android:layout_weight="0.90"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="113"
-                android:textStyle="normal"
+                android:text="Cells infos"
+                android:layout_weight="1.5"
                 android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/txt_logs_date"
-                android:layout_width="0dp"
-                android:layout_weight="1.00"
+                android:id="@+id/txt_logs_operator"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-90"
-                android:textStyle="normal"
+                android:text="Cells infos"
+                android:layout_weight="1.5"
+                android:layout_marginRight="3dp"
+                android:textColor="#888888"
+                android:textSize="9dp"
+                android:gravity="right" />
+
+            <TextView
+                android:id="@+id/txt_logs_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date"
+                android:layout_weight="0"
                 android:textColor="@android:color/black"
                 android:gravity="end" />
 
             <ImageButton
                 android:id="@+id/logs_btn_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginLeft="5dp"
                 android:src="@drawable/ic_more_vert"
                 android:layout_toRightOf="@+id/txt_logs_text"
                 android:background="@null" />
@@ -69,5 +84,6 @@
         </LinearLayout>
 
     </RelativeLayout>
+    </FrameLayout>
 
 </LinearLayout>
