--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -3,13 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:background="@drawable/layout_bg"
+        android:elevation="2dp">
+
     <RelativeLayout
         android:id="@+id/layout_item_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="#FFFFFF"
-        android:padding="5dp">
+        android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/txt_operator"
@@ -264,5 +268,6 @@
         </LinearLayout>
 
     </RelativeLayout>
+    </FrameLayout>
 
 </LinearLayout>
