--- a/app/src/main/res/layout/listview_monitor_psc.xml
+++ b/app/src/main/res/layout/listview_monitor_psc.xml
@@ -3,15 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/layout_bg"
+        android:clickable="true">
+
     <RelativeLayout
         android:id="@+id/layout_item_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:padding="5dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="5dp">
+        android:clickable="true">
 
     <LinearLayout
         android:id="@+id/layout_psc"
@@ -58,5 +64,6 @@
         </LinearLayout>
 
     </RelativeLayout>
+    </FrameLayout>
 
 </LinearLayout>
