--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -25,7 +25,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Oups! Lost connection."
+                    android:text="Oops! Lost connection."
                     android:textSize="20dp"
                     android:textColor="@android:color/black" />
 
@@ -33,9 +33,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Are you on planet Earth ? ;)"
-                    android:textSize="15dp"
+                    android:textSize="16dp"
                     android:textStyle="italic"
-                    android:textColor="@android:color/black" />
+                    android:textColor="#555555" />
 
             </LinearLayout>
 
