--- a/app/src/main/res/layout/listview_logs_main.xml
+++ b/app/src/main/res/layout/listview_logs_main.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/fm_logs_general"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
