--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -15,14 +15,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/txt_operator"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:id="@+id/layout_item_main_ope"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ope"
-            android:textColor="#ff000000"
-            android:textSize="30dp"
-            android:layout_marginBottom="5dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_operator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ope"
+                android:textColor="#ff000000"
+                android:textSize="26dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="5dp"/>
+
+            <TextView
+                android:id="@+id/txt_ope_tech"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="(LTE)"
+                android:textColor="#ff000000"
+                android:textSize="20dp"
+                android:layout_marginBottom="5dp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="right">
+
+                <TextView
+                    android:id="@+id/txt_ope_tech_3G"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3G"
+                    android:textColor="#888888"
+                    android:textSize="12dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="5dp" />
+
+                <TextView
+                    android:id="@+id/txt_ope_tech_4G"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4G"
+                    android:textColor="#000000"
+                    android:textSize="12dp"
+                    android:layout_marginBottom="5dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <!-- CI -->
 
@@ -30,7 +75,7 @@
             android:id="@+id/layout_ci"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/txt_operator"
+            android:layout_below="@+id/layout_item_main_ope"
             android:orientation="horizontal" >
 
             <TextView
