--- a/app/src/main/res/layout/activity_export_logs.xml
+++ b/app/src/main/res/layout/activity_export_logs.xml
@@ -48,12 +48,50 @@
 
                     <TextView
                         android:id="@+id/txt_export_count_i"
-                        android:layout_width="140dp"
+                        android:layout_width="180dp"
                         android:textColor="#111111"
                         android:layout_height="wrap_content"
-                        android:text="Number to export :" />
+                        android:text="Number to export (ALL) :" />
                     <TextView
                         android:id="@+id/txt_export_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="sdfdz" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lyt_export_info_count_log_umts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:id="@+id/txt_export_count_i_umts"
+                        android:layout_width="180dp"
+                        android:textColor="#111111"
+                        android:layout_height="wrap_content"
+                        android:text="Number to export (UMTS) :" />
+                    <TextView
+                        android:id="@+id/txt_export_count_umts"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="sdfdz" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lyt_export_info_count_log_lte"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:id="@+id/txt_export_count_i_lte"
+                        android:layout_width="180dp"
+                        android:textColor="#111111"
+                        android:layout_height="wrap_content"
+                        android:text="Number to export (LTE) :" />
+                    <TextView
+                        android:id="@+id/txt_export_count_lte"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="sdfdz" />
@@ -66,7 +104,7 @@
                     android:orientation="horizontal" >
                     <TextView
                         android:id="@+id/txt_detail_cid_i"
-                        android:layout_width="140dp"
+                        android:layout_width="180dp"
                         android:textColor="#111111"
                         android:layout_height="wrap_content"
                         android:text="Export file formatting :" />
@@ -99,7 +137,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="16dp"
+                    android:textSize="14dp"
+                    android:backgroundTint="@color/ColorPrimary" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lyt_import_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lyt_import_text"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/txt_import_text_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#111111"
+                    android:text="Name of export (example: dept 90) :" />
+
+                <EditText
+                    android:id="@+id/inp_import_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="14dp"
                     android:backgroundTint="@color/ColorPrimary" />
 
             </LinearLayout>
@@ -109,7 +172,7 @@
                 android:id="@+id/lyt_cell_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/lyt_import_text"
+                android:layout_below="@id/lyt_import_name"
                 android:layout_marginBottom="5dp"
                 android:weightSum="2"
                 android:orientation="horizontal"
@@ -126,7 +189,47 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/lyt_export_reult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_below="@id/lyt_cell_btn"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/txt_export_text_result"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#555555"
+                    android:text="Export history" />
+            </LinearLayout>
+
         </RelativeLayout>
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/lyt_export_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/txt_export_text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#555555"
+            android:textSize="20dp"
+            android:text="Export history" />
+        </LinearLayout>
+
+    <ListView
+        android:id="@+id/list_export_logs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
 </LinearLayout>
