--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/lyt_info_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="5dp"
         android:background="@drawable/layout_bg"
         android:elevation="2dp" >
 
@@ -50,9 +50,10 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/lyt_info_rnc_database"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="5dp"
         android:layout_below="@id/lyt_info_version"
         android:background="@drawable/layout_bg"
         android:elevation="2dp" >
@@ -77,6 +78,62 @@
                 android:layout_alignParentEnd="true"
                 android:text="-"
                 android:id="@+id/txt_rnc_database"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+
+        </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/lyt_info_logs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_below="@id/lyt_info_rnc_database"
+        android:background="@drawable/layout_bg"
+        android:elevation="2dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Logs informations :"
+                android:id="@+id/lbl_info_logs"
+                android:textSize="15dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_nb_total"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_nb_umts"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_nb_lte"
                 android:textSize="12dp"
                 android:textColor="@android:color/black"
                 android:padding="2dp" />
