--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -42,6 +42,45 @@
         </RelativeLayout>
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/lyt_monitor_2g"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:layout_margin="6dp"
+        android:background="@drawable/layout_bg"
+        android:clickable="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Edge is not implemented."
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Orange network"
+                    android:textSize="16dp"
+                    android:textStyle="italic"
+                    android:textColor="#555555" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </FrameLayout>
+
     <ListView
         android:id="@+id/list_main"
         android:layout_width="match_parent"
