--- a/app/src/main/res/layout/listview_logs_main.xml
+++ b/app/src/main/res/layout/listview_logs_main.xml
@@ -49,14 +49,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date"
+                android:textSize="12dp"
                 android:layout_weight="0"
                 android:textColor="@android:color/black"
                 android:gravity="end" />
 
             <ImageButton
                 android:id="@+id/logs_btn_menu"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginLeft="5dp"
                 android:src="@drawable/ic_more_vert"
                 android:layout_toRightOf="@+id/txt_logs_text"
