--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_width="match_parent" />
 
     <org.rncteam.rncfreemobile.view.SlidingTabLayout
