--- a/app/src/main/res/layout/activity_logs_maps.xml
+++ b/app/src/main/res/layout/activity_logs_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,4 +8,58 @@
         android:layout_height="match_parent" android:id="@+id/map2" tools:context=".LogsMapsActivity"
         android:name="com.google.android.gms.maps.MapFragment" />
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/map_ext_infos"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:background="#AAFFFFFF"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/map_ext_infos_rnc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:text="RNC :"/>
+
+            <TextView
+                android:id="@+id/map_ext_infos_cid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:text="CID :"/>
+
+            <TextView
+                android:id="@+id/map_ext_infos_distance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:text="TO BTS :"/>
+
+            <TextView
+                android:id="@+id/map_ext_infos_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:text="txt :"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
