--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -164,4 +164,44 @@
 
     </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_bg"
+        android:layout_margin="6dp"
+        android:clickable="true"
+        android:elevation="2dp" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <LinearLayout
+                android:id="@+id/lyt_data_rnc_debug"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txt_data_rnc_debug_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="DEBUG"
+                    android:textColor="#555555"
+                    android:textSize="20dp"/>
+
+                <TextView
+                    android:id="@+id/txt_data_rnc_debug_info"
+                    android:layout_width="match_parent"
+                    android:textColor="#111111"
+                    android:layout_height="wrap_content"
+                    android:text="Do not use" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
 </LinearLayout>
