--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -37,8 +37,17 @@
                 android:layout_height="wrap_content"
                 android:text="(LTE)"
                 android:textColor="#ff000000"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:layout_marginBottom="5dp" />
+
+            <TextView
+                android:id="@+id/txt_freq_sect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Freq"
+                android:textColor="#888888"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"/>
 
             <LinearLayout
                 android:layout_width="fill_parent"
