--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,12 +7,20 @@
         <CheckBoxPreference
             android:title="Ecran toujours allumé"
             android:key="screen"
-            android:summary="Garde l'ecran allumé lors de vos chasses">
+            android:summary="Garde l'ecran allumé lors de vos chasses"
+            android:checked="false">
         </CheckBoxPreference>
         <CheckBoxPreference
             android:title="Log en itinerance"
             android:key="log_roaming"
-            android:summary="Enregistre les cells dans le log">
+            android:summary="Enregistre les cells dans le log"
+            android:checked="true">
+        </CheckBoxPreference>
+        <CheckBoxPreference
+            android:title="Centrer la carte sur nouveau CID"
+            android:key="map_center"
+            android:summary="Centre la carte sur une antenne sur nouveau CID"
+            android:checked="false">
         </CheckBoxPreference>
 
 
