--- a/app/src/main/res/layout/activity_export_logs.xml
+++ b/app/src/main/res/layout/activity_export_logs.xml
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="14dp"
-                    android:backgroundTint="@color/ColorPrimary"
+                    android:backgroundTint="@color/colorPrimary"
                     android:focusableInTouchMode="true"/>
 
             </LinearLayout>
@@ -164,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="14dp"
-                    android:backgroundTint="@color/ColorPrimary"
+                    android:backgroundTint="@color/colorPrimary"
                     android:focusableInTouchMode="true" />
 
             </LinearLayout>
