--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:text="SEND REPORT"
                     android:textSize="16dp"
-                    android:background="@color/ColorPrimary"
+                    android:background="@color/colorPrimary"
                     android:layout_weight="1" />
 
             </LinearLayout>
