--- a/app/src/main/res/layout/listview_logs_main.xml
+++ b/app/src/main/res/layout/listview_logs_main.xml
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:text="sdfsfsdf sef zegfsdf sqdf df "
                 android:textStyle="normal"
-                android:textColor="@color/ColorPrimaryDark" />
+                android:textColor="@color/colorPrimaryDark" />
 
 
         </LinearLayout>
