--- a/app/src/main/res/layout/listview_monitor_psc.xml
+++ b/app/src/main/res/layout/listview_monitor_psc.xml
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:text="sdfsfsdf sef zegfsdf sqdf df "
                 android:textStyle="normal"
-                android:textColor="@color/ColorPrimaryDark" />
+                android:textColor="@color/colorPrimaryDark" />
 
         </LinearLayout>
 
