--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:background="@color/ColorPrimary"
-    android:elevation="0dp"
-    android:theme="@style/AppTheme"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:background="@color/colorPrimary"
+    android:theme="@style/RFMTheme"
+    local:theme="@style/ThemeOverlay.AppCompat.Light"
+    local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
 
